--- a/cmd/web/base.templ
+++ b/cmd/web/base.templ
@@ -2,16 +2,18 @@ package web
 
 templ Base() {
 	<!DOCTYPE html>
-	<html lang="en">
+	<html class="h-full bg-gray-100" lang="en">
 		<head>
 			<meta charset="utf-8"/>
-			<title>Go Blueprint Hello</title>
-			<script src="assets/js/htmx.min.js"></script>
+			<meta name="viewport" content="width=device-width, initial-scale=1"/>
+			<title>NASA API Info Project</title>
+			<link rel="stylesheet" href="/assets/css/output.css"/>
+			<script src="/assets/js/htmx.min.js"></script>
+			// <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+			<script src="https://kit.fontawesome.com/c58aa71f0c.js" crossorigin="anonymous"></script>
 		</head>
-		<body>
-			<main>
-				{ children... }
-			</main>
+		<body class="h-full">
+			{ children... }
 		</body>
 	</html>
 }
