--- a/cmd/web/base.templ
+++ b/cmd/web/base.templ
@@ -2,7 +2,7 @@ package web
 
 templ Base() {
 	<!DOCTYPE html>
-	<html class="h-full bg-gray-100" lang="en">
+	<html class="h-full bg-white" lang="en">
 		<head>
 			<meta charset="utf-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1"/>
