--- a/cmd/web/home.templ
+++ b/cmd/web/home.templ
@@ -9,6 +9,7 @@ templ HomePage() {
 				<div class="mt-10 max-w-2xl">
 					<h2 class="mt-10 text-2xl font-bold tracking-tight text-gray-900">REST API</h2>
 					<h3 class="mt-4 text-xl font-bold tracking-tight text-gray-900">Solar Flares</h3>
+					<h4 class="mt-2 text-lg"><strong>GET</strong> <a class="text-blue-400" href="/solar"><code>/solar?startDate=YYYY-MM-DD&endDate=YYYY-MM-DD</code></a></h4>
 					<p class="mt-2"><strong>Parameters</strong>:</p>
 					<ul role="list" class="mt-4 max-w-xl space-y-4 text-gray-600">
 						<li class="flex gap-x-3">
@@ -104,6 +105,7 @@ templ HomePage() {
 						</li>
 					</ul>
 					<h3 class="mt-10 text-xl font-bold tracking-tight text-gray-900">Asteroids</h3>
+					<h4 class="mt-2 text-lg"><strong>GET</strong> <a class="text-blue-400" href="/asteroids"><code>/asteroids</code></a></h4>
 					<p class="mt-2"><strong>Example Response</strong>:</p>
 					<pre class="overflow-x-auto p-4 text-xs bg-gray-200">
 						<code class="language-json">
